# data-pipeline-with-microservices

./: .gitignore  Readme.md
microservices/crawler/: Readme.md  main.py  pyproject.toml
microservices/crawler/docker/: Dockerfile
