[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Vanik Karslian <vanik.karslian@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pydantic = "^1.10.2"
aiohttp = "^3.8.3"
pathlib = "^1.0.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
